-
Type:
Bug
-
Status: Resolved
-
Priority:
Minor
-
Resolution: Fixed
-
Affects Version/s: Impala 2.11.0
-
Fix Version/s: Impala 2.13.0
-
Component/s: Backend
-
Labels:None
-
Target Version:
-
Epic Color:ghx-label-8
As noted in IMPALA-1262, it'd be better if ClientRequestState used HS2 states rather than Beeswax states, since the HS2 states are a superset and have an explicit state for CANCELED. The goal of this Jira is to migrate CRS to use the HS2 type (but not change the client visible behavior), to set things up for the future.
- is related to
-
IMPALA-1262 user initiated query cancellation should return operation_state = CANCELED_STATE
-
- Open
-